--- a/code/home.html
+++ b/code/home.html
@@ -22,8 +22,8 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Civil Engineer & Structural Designer</h1>
-            <p>Transforming visions into stable, sustainable structures</p>
+            <h1><center>Civil Engineer & Structural Designer</center></h1>
+            <p><center>Transforming visions into stable, sustainable structures</center></p>
             <div style="margin-top: 2rem;">
                 <a href="#contact" class="btn">Hire Me</a>
             </div>
