--- a/code/home.html
+++ b/code/home.html
@@ -59,7 +59,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-img">
-                    <img src="E:\Portfolio webpage\Resources\brickfactory.jpg" alt="Project 1">
+                    <img src="brickfactory.jpg" alt="Project 1">
                 </div>
                 <div class="project-info">
                     <h3><center>Minor Project:I </center></h3>
