--- a/code/home.html
+++ b/code/home.html
@@ -166,7 +166,127 @@
             </div>
         </div>
     </section>
-    </section>
+    <section id="cv">
+    <div class="section-title">
+        <h2>CURRICULUM VITAE</h2>
+        <div style="text-align:center;">
+            <i>Here is a brief overview of selected projects I have been involved in, both during my time as a Civil Engineering student and in my professional career as a Civil engineer.</i>
+        </div>
+    </div>
+         <p class="cv-container">
+            <div class="cv-item">
+               
+                <ul style="margin-left: 0; padding-left: 20px; text-align: left;">
+                    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV</title>
+    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+    <div class="container">
+        <div class="main-content">
+            <!-- Photo Section -->
+            <div class="photo-section">
+                <img src="mypicture.JPG" alt="Avik Poudel" class="profile-photo">
+                <h1>Avik Poudel</h1>
+                <p>Civil Engineer</p>
+            </div>
+
+            <!-- Profile -->
+            <div class="section">
+                <h2 class="section-title">PROFILE</h2>
+                <p>Motivated Civil Engineer with a Bachelor's degree and a proven ability to apply creative thinking to engineering challenges, seeking to grow professionally within a reputable organization.</p>
+            </div>
+
+            <!-- Education -->
+            <div class="section">
+                <h2 class="section-title">EDUCATION</h2>
+                <div class="education-item">
+                    <div class="date">2018-2022</div>
+                    <div>
+                        <h3>COSMOS COLLEGE OF MANAGEMENT AND TECHNOLOGY</h3>
+                        <p>POKHARA UNIVERSITY</p>
+                        <p>Bachelor in Civil Engineering</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Work Experience -->
+            <div class="section">
+                <h2 class="section-title">WORK EXPERIENCE</h2>
+                <div class="experience-item">
+                    <div class="date">2023 Dec-Present</div>
+                    <div>
+                        <h3>Hints Consult Pvt.Ltd</h3>
+                        <p>Civil Engineer</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Extracurricular -->
+            <div class="section">
+                <h2 class="section-title">EXTRACURRICULAR ACTIVITIES</h2>
+                <h3>CESS-COSMOS (member)</h3>
+                <p>Participating in different Civil engineering programs and compitiions.</p>
+            </div>
+        </div>
+
+        <!-- Right Side Content -->
+        <div class="side-content">
+            <!-- Contact Info -->
+            <div class="section">
+                <h2 class="section-title">CONTACT</h2>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        avikpoudel4@gmail.com
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone"></i>
+                        (+977) 9840174027
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        Kathmandu, Nepal
+                    </div>
+                </div>
+            </div>
+
+            <!-- Technical Skills -->
+            <div class="section">
+                <h2 class="section-title">TECHNICAL SKILLS</h2>
+                <ul class="skill-list">
+                    <li class="skill-item">Auto-CAD</li>
+                    <li class="skill-item">ETabs</li>
+                    <li class="skill-item">MS Office</li>
+                </ul>
+            </div>
+
+            <!-- Additional Courses -->
+            <div class="section">
+                <h2 class="section-title">ADDITIONAL COURSES</h2>
+                <div class="skill-item">2023 ETAB Training</div>
+            </div>
+
+            <!-- Interests -->
+            <div class="section">
+                <h2 class="section-title">INTERESTS</h2>
+                <ul class="skill-list">
+                    <li class="skill-item">Reading Books</li>
+                    <li class="skill-item">Exploring Random Facts</li>
+                    <li class="skill-item">Learning New Things</li>
+                    <li class="skill-item">Coding</li>
+                    <li class="skill-item">Trekking</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+                </ul>
+            </div>
+        </p>
+       <center><a href="cv.pdf" class="btn" download>Download CV</a></center>
+    
     <section id="contact">
         <div class="section-title">
             <h2>Get In Touch</h2>
