--- a/code/home.html
+++ b/code/home.html
@@ -97,9 +97,9 @@
         <div class="section-title">
             <h2>Work Experience</h2>
         </div>
-        <p class="experience-container">
+        <div class="experience-container">
             <div class="experience-item">
-                <h3>Hints Consult Pvt.ltd Kathmandu, Nepal</h3>
+                <h3 style="text-align: center;">Hints Consult Pvt.ltd Kathmandu, Nepal</h3>
                 <ul style="margin-left: 0; padding-left: 20px; text-align: left;">
                     <li>Structural design and analysis.</li>
                     <li>Overseeing project sites.</li>
@@ -108,7 +108,7 @@
                     <li>Engaging with clients to understand their requirements, provide updates and address any concerns and ensuring high level client satisfaction.</li>
                 </ul>
             </div>
-        </p>
+        </div>
             <!-- Add more skill items -->
         </div>
     </section>
@@ -239,15 +239,15 @@
                 <h2 class="section-title">CONTACT</h2>
                 <div class="contact-info">
                     <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
+                        <img src="email.png" alt="email" width="20px" height="20px">
                         avikpoudel4@gmail.com
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-phone"></i>
+                        <img src="phone.png" alt="phone" width="20px" height="20px">
                         (+977) 9840174027
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <img src="location.png" alt="location" width="20px" height="20px">
                         Kathmandu, Nepal
                     </div>
                 </div>
