--- a/code/home.html
+++ b/code/home.html
@@ -97,9 +97,10 @@
         <div class="section-title">
             <h2>Work Experience</h2>
         </div>
-        <div class="experience-container">
+        <p class="experience-container">
+             <center><h3>Hints Consult Pvt.ltd Kathmandu, Nepal</h3></center>
             <div class="experience-item">
-                <h3 style="text-align: center;">Hints Consult Pvt.ltd Kathmandu, Nepal</h3>
+               
                 <ul style="margin-left: 0; padding-left: 20px; text-align: left;">
                     <li>Structural design and analysis.</li>
                     <li>Overseeing project sites.</li>
@@ -108,7 +109,7 @@
                     <li>Engaging with clients to understand their requirements, provide updates and address any concerns and ensuring high level client satisfaction.</li>
                 </ul>
             </div>
-        </div>
+        </p>
             <!-- Add more skill items -->
         </div>
     </section>
