--- a/code/home.html
+++ b/code/home.html
@@ -196,7 +196,7 @@
         <div class="section-title">
             <h2>Work Experience</h2>
         </div>
-        <p class="experience-container">
+        <div class="experience-container">
             <div class="experience-item">
                 <ul style="margin-left: 0; padding-left: 20px; text-align: left;">
                     <center><h3>Hints Consult Pvt.ltd Kathmandu, Nepal</h3></center>
@@ -207,7 +207,7 @@
                     <li>Engaging with clients to understand their requirements, provide updates and address any concerns and ensuring high level client satisfaction.</li>
                 </ul>
             </div>
-        </p>
+        </div>
             <!-- Add more skill items -->
         </div>
     </section>
