--- a/home.html
+++ b/home.html
@@ -99,7 +99,6 @@
             <h2>Work Experience</h2>
         </div>
         <div class="experience-container">
-<<<<<<< HEAD:code/home.html
             <div class="experience-item">
                 <ul style="margin-left: 0; padding-left: 20px; text-align: left;">
                     <center><h3>Hints Consult Pvt.ltd Kathmandu, Nepal</h3></center>
@@ -116,7 +115,6 @@
         <div class="experience-item">
         <div class="company-title">
             <h2 >Hints Consult Pvt.Ltd. Kathmandu, Nepal</h2>
->>>>>>> d5ca77b162960ab1b57868be2828dec7a15bf66a:home.html
         </div>
         <div class="responsibility-list">
         <ul>
@@ -359,7 +357,7 @@
     <style>
         .social-links {
             position: fixed;
-            right: 20px;
+            left: 20px;
             bottom: 20px;
             display: flex;
             flex-direction: column;
@@ -398,7 +396,7 @@
         .social-links a::after {
             content: attr(aria-label);
             position: absolute;
-            right: 60px;
+            left: 60px;
             background: rgba(0, 0, 0, 0.8);
             color: white;
             padding: 5px 10px;
@@ -416,7 +414,7 @@
 
         @media (max-width: 768px) {
             .social-links {
-                right: 10px;
+                left: 10px;
                 bottom: 10px;
                 padding: 10px 8px;
                 gap: 10px;
@@ -429,7 +427,7 @@
             }
 
             .social-links a::after {
-                right: 45px;
+                left: 45px;
                 font-size: 12px;
             }
         }
