--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="css/style2.css">
+     <link rel="stylesheet" href="css/scrollButton.css">
     
 </head>
 <body>
@@ -101,9 +102,10 @@
         <div class="experience-container">
         <div class="experience-item">
         <div class="company-title">
-            <h2 >Hints Consult Pvt.Ltd. Kathmandu, Nepal</h2>
+            
         </div>
         <div class="responsibility-list">
+            <h2>Hints Consult Pvt.Ltd. Kathmandu, Nepal</h2>
         <ul>
             <li>Structural design and analysis.</li>
             <li>Overseeing project sites.</li>
@@ -221,7 +223,7 @@
             <!-- Work Experience -->
             <div class="section">
                 <h2 class="section-title">WORK EXPERIENCE</h2>
-                <div class="experience-item">
+                <div class="cv-experience-item">
                     <div class="date">2023 Dec-Present</div>
                     <div>
                         <h3>Hints Consult Pvt.Ltd</h3>
@@ -332,7 +334,7 @@
     <style>
         .social-links {
             position: fixed;
-            right: 20px;
+            left: 20px;
             bottom: 20px;
             display: flex;
             flex-direction: column;
@@ -371,7 +373,7 @@
         .social-links a::after {
             content: attr(aria-label);
             position: absolute;
-            right: 60px;
+            left: 60px;
             background: rgba(0, 0, 0, 0.8);
             color: white;
             padding: 5px 10px;
@@ -389,7 +391,7 @@
 
         @media (max-width: 768px) {
             .social-links {
-                right: 10px;
+                left: 10px;
                 bottom: 10px;
                 padding: 10px 8px;
                 gap: 10px;
@@ -402,13 +404,11 @@
             }
 
             .social-links a::after {
-                right: 45px;
+                left: 45px;
                 font-size: 12px;
             }
         }
     </style>
-</head>
-<body>
     <div class="social-links">
         <a href="https://www.facebook.com/avik.poudel" target="_blank" class="facebook" aria-label="Facebook">
             <i class="fab fa-facebook-f"></i>
@@ -420,5 +420,11 @@
             <i class="fab fa-linkedin-in"></i>
         </a>
     </div>
+    <button class="scroll-top-btn" aria-label="Scroll to top">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 19V5M5 12l7-7 7 7"/>
+        </svg>
+    </button>
+<script src="js/scroll.js"></script>
 </body>
 </html>
