--- a/home.html
+++ b/home.html
@@ -291,6 +291,7 @@
                 </ul>
             </div>
         </p>
+         <center><i>Here is a detaied CV you can download</i></center>
        <center><a href="resources/cv.pdf" class="btn" download>Download CV</a></center>
     
     <section id="contact">
