--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
             <a href="#experience">Experience</a>
             <a href="#about">About</a>
             <a href="#cv">CV</a>
+            <a href="hobby.html">Photography</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
