--- a/hobby.html
+++ b/hobby.html
@@ -169,6 +169,38 @@
                 title: "Sunrise",
                 description: "Sunrise, Khumaltar, Lalitpur"
             },
+            {
+                url: "Photos/janaki.jpg",
+                title: "Janaki Temple",
+                description: "Janaki Temple, Janakpur"
+            },
+             {
+                url: "Photos/jarsing.jpg",
+                title: "Gumba",
+                description: "Jarsing pauwa"
+            },
+             {
+                url: "Photos/ABC.jpg",
+                title: "Annapurna Base Camp",
+                description: "Annapurna Base Camp Trek"
+            },
+             {
+                url: "Photos/ABC.jpg",
+                title: "Annapurna Base Camp",
+                description: "Annapurna Base Camp Trek"
+            },
+             {
+                url: "Photos/ABC.jpg",
+                title: "Annapurna Base Camp",
+                description: "Annapurna Base Camp Trek"
+            },
+             {
+                url: "Photos/ABC.jpg",
+                title: "Annapurna Base Camp",
+                description: "Annapurna Base Camp Trek"
+            },
+        
+            
             // Add more photos as needed
         ];
 
