--- a/hobby.html
+++ b/hobby.html
@@ -141,7 +141,7 @@
 </head>
 <body>
     <nav class="nav">
-        <h1>Photos</h1>
+        <h1>Travel</h1>
     </nav>
 
     <div class="gallery" id="gallery"></div>
@@ -185,19 +185,19 @@
                 description: "Annapurna Base Camp Trek"
             },
              {
-                url: "Photos/ABC.jpg",
-                title: "Annapurna Base Camp",
-                description: "Annapurna Base Camp Trek"
+                url: "Photos/survey.jpg",
+                title: "Irrigation Survey",
+                description: "Ghatte Khola Irrigation Survey, Shankharapur, Kathmandu"
             },
              {
-                url: "Photos/ABC.jpg",
-                title: "Annapurna Base Camp",
-                description: "Annapurna Base Camp Trek"
+                url: "Photos/tea.jpg",
+                title: "Tea Garden",
+                description: "Tea feilds, kanyam, Illam"
             },
              {
-                url: "Photos/ABC.jpg",
-                title: "Annapurna Base Camp",
-                description: "Annapurna Base Camp Trek"
+                url: "Photos/goshainkunda.jpg",
+                title: "Goshainkunda lake",
+                description: "Giishankunda lake, Rasuwa"
             },
         
             
