--- a/home.html
+++ b/home.html
@@ -22,6 +22,15 @@
             <a href="#cv">CV</a>
             <a href="hobby.html">Travel</a>
             <a href="#contact">Contact</a>
+<li class="dropdown">
+  <a href="#" class="dropbtn">Tools</a>
+  <div class="dropdown-content">
+    <a href="#tool1">Tool 1</a>
+    <a href="#tool2">Tool 2</a>
+    <a href="#tool3">Tool 3</a>
+  </div>
+</li>
+
         </div>
     </nav>
     
