--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 <li class="dropdown">
   <a href="#" class="dropbtn">Tools</a>
   <div class="dropdown-content">
-    <a href="#tool1">Tool 1</a>
+    <a href="concretecal.html">Building Tool</a>
     <a href="#tool2">Tool 2</a>
     <a href="#tool3">Tool 3</a>
   </div>
