--- a/home.html
+++ b/home.html
@@ -683,6 +683,7 @@ window.addEventListener('DOMContentLoaded', initConverter);
         .facebook { background: #1877f2; }
         .whatsapp { background: #25d366; }
         .linkedin { background: #0a66c2; }
+        .github { background: #333; }
 
         /* Tooltip on hover */
         .social-links a::after {
@@ -735,6 +736,9 @@ window.addEventListener('DOMContentLoaded', initConverter);
         </a>
         <a href="https://www.linkedin.com/in/avik-poudel-980027285/" target="_blank" class="linkedin" aria-label="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/poudelavik1" target="_blank" class="github" aria-label="github">
+            <img src="resources/github.png" alt="GitHub Logo" width="35" height="35">
         </a>
     </div>  
     <!-- Scroll to Top Button -->
