--- a/hobby.html
+++ b/hobby.html
@@ -155,14 +155,14 @@
         // Add your photos here
         const photoData = [
             {
-                url: "Photos/sunset.jpg",
+                url: "Photos/random.jpg",
                 title: "Mountain View",
                 description: "Sunset in the mountains"
             },
             {
                 url: "Photos/Mountains.jpg",
-                title: "Mountains",
-                description: "Into the Mountains"
+                title: "Random",
+                description: "Random art in the Mountains"
             },
             {
                 url: "Photos/Sunrise.jpg",
