--- a/hobby.html
+++ b/hobby.html
@@ -156,13 +156,13 @@
         const photoData = [
             {
                 url: "Photos/random.jpg",
-                title: "Mountain View",
-                description: "Sunset in the mountains"
+                title: "Random art",
+                description: "Random art in the Mountains"
             },
             {
                 url: "Photos/Mountains.jpg",
-                title: "Random",
-                description: "Random art in the Mountains"
+                title: "In the Mountains",
+                description: "Mountains, Nepal"
             },
             {
                 url: "Photos/Sunrise.jpg",
