--- a/hobby.html
+++ b/hobby.html
@@ -160,9 +160,9 @@
                 description: "Random art in the Mountains"
             },
             {
-                url: "Photos/Mountains.jpg",
-                title: "In the Mountains",
-                description: "Mountains, Nepal"
+                url: "Photos/cj.JPG",
+                title: "Concrete Jungle",
+                description: "View of Kathmandu from Chandragiri Hills"
             },
             {
                 url: "Photos/Sunrise.jpg",
