--- a/hobby.html
+++ b/hobby.html
@@ -170,7 +170,7 @@
                 description: "Sunrise, Khumaltar, Lalitpur"
             },
             {
-                url: "Photos/janaki.jpg",
+                url: "Photos/janaki.JPG",
                 title: "Janaki Temple",
                 description: "Janaki Temple, Janakpur"
             },
