--- a/hobby.html
+++ b/hobby.html
@@ -190,12 +190,12 @@
                 description: "Ghatte Khola Irrigation Survey, Shankharapur, Kathmandu"
             },
              {
-                url: "Photos/tea.jpg",
+                url: "Photos/tea.JPG",
                 title: "Tea Garden",
                 description: "Tea feilds, kanyam, Illam"
             },
              {
-                url: "Photos/goshainkunda.jpg",
+                url: "Photos/goshainkunda.JPG",
                 title: "Goshainkunda lake",
                 description: "Giishankunda lake, Rasuwa"
             },
