--- a/hobby.html
+++ b/hobby.html
@@ -165,7 +165,7 @@
                 description: "View of Kathmandu from Chandragiri Hills"
             },
             {
-                url: "Photos/Sunrise.jpg",
+                url: "Photos/Sunrise.JPG",
                 title: "Sunrise",
                 description: "Sunrise, Khumaltar, Lalitpur"
             },
